[project]
name = "databricks-repo-proxy"
dynamic = ["dependencies"]
version = "0.0.18"
description = "A proxy for databricks repos"
readme = "README.md"

[project.scripts]
db_proxy = "proxy.main:main"
db_proxy_doctor = "proxy.doctor:doctor"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}